[package]
name = "mcanvil"
version = "0.3.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
description = "A parser for Minecraft's Anvil world format."
readme = "README.md"
keywords = ["anvil", "minecraft", "region"]
license = "MIT"
edition = "2024"

[lints.rust]
missing_docs = "deny"
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[dependencies]
async-proto = { version = "0.25.1", optional = true }
futures = "0.3.31"
hematite-nbt = "0.5"
itertools = "0.14.0"
lazy-regex = "3"
serde = { version = "1", features = ["derive"] }
serde_with = "3.12.0"
thiserror = "2"
tokio = { version = "1.45.0", features = ["fs", "io-util", "macros", "rt"] }
