[package]
name = "mcanvil"
version = "0.3.3"
authors = ["Fenhl <fenhl@fenhl.net>"]
description = "A parser for Minecraft's Anvil world format."
readme = "README.md"
keywords = ["anvil", "minecraft", "region"]
license = "MIT"
edition = "2024"
rust-version = "1.91" # nixpkgs stable

[lints.rust]
missing_docs = "deny"
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[dependencies]
arrayref = "0.3"
async-proto = { version = "0.26", optional = true }
chrono = { version = "0.4", default-features = false }
futures = "0.3"
hematite-nbt = "0.5" #TODO switch to simdnbt for performance improvements once it supports stable Rust (https://github.com/azalea-rs/simdnbt/issues/16)
itertools = "0.14"
lazy-regex = "3"
serde = { version = "1", features = ["derive"] }
serde_with = "3"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt", "time"] }
